syntax = "proto3";

package com.arsiu.eduhub.v2.assignmentsvc.input.reqreply.assignment;

option java_multiple_files = true;

message FindAllAssignmentRequest {}
