syntax = "proto3";

import "com/arsiu/eduhub/v2/assignmentsvc/commonmodels/assignment/assignment.proto";
option java_package = "com.arsiu.eduhub.v2.assignmentsvc.output.reqreply.assignment";
option java_outer_classname = "FindAllAssignmentResponseProto";

message FindAllAssignmentResponse {
  AssignmentResponse response = 1;
}
